@@ -17,14 +17,16 @@
 }
 
 
-div#block-feedback-form {
+#block-feedback-form {
+  display: none;
   position: fixed;
   bottom: 60px;
   right: 20px;
   overflow: hidden;
   z-index: 10;
 }
-* html div#block-feedback-form { /* IE6 */
+/* IE6 seems to be unable to handle fixed */
+* html #block-feedback-form {
   position: absolute;
 }
 #block-feedback-form .feedback-link {
@@ -36,15 +38,12 @@ div#block-feedback-form {
   display: inline;
   font-size: 12px;
 }
-#block-feedback-form .content {
-  display: none;
-  width: 220px;
-}
 #block-feedback-form form {
   border: 1px solid #ccc;
   padding: 6px;
   background-color: #fff;
   opacity: 0.9;
+  width: 200px;
 }
 #block-feedback-form .feedback-help {
   margin: 0 0 0.5em;
@@ -55,14 +54,23 @@ div#block-feedback-form {
   margin-top: 0.2em;
   font-size: 10px;
 }
+#block-feedback-form .form-textarea {
+  width: 97%;
+}
 #block-feedback-form .feedback-message {
   height: 10ex;
 }
 #block-feedback-form .resizable-textarea .grippie {
   width: 204px;
 }
+/* IE6 fails to render textarea with full width */
+* html #block-feedback-form .resizable-textarea textarea {
+  width: 200px;
+}
 #block-feedback-form #feedback-throbber {
   height: 20px;
+}
+#block-feedback-form .throbbing {
   background: url(images/throbber.gif) no-repeat left center;
 }
 #block-feedback-form #feedback-submit {
