@@ -6,6 +6,7 @@ Feedback x.x-x.x, xxxx-xx-xx
 
 Feedback 7.x-2.x, xxxx-xx-xx
 ----------------------------
+#370223 by sun, Jeff Burnz: Fixed compatibility with custom block markup.
 by sun: Ported to Drupal 7.
 
 
